allow plot_piano() to mark keys

--- a/README.Rmd
+++ b/README.Rmd
@@ -47,3 +47,12 @@ The range of the piano can be restricted and labels can be added:
 plot_piano("C", "e2", labels = "white")
 ```
 
+Chords can be marked on the keyboard using different colours for the
+left and right hand:
+
+```{r piano_with_chord, fig.height=1.8, out.width="80%"}
+plot_piano("F", "c3",
+           mark_left = c("e", "bb", "d1"),
+           mark_right = c("e1", "a1", "c2"))
+```
+
